test_regress/t/t_property_untyped_unsup.out
%Error-UNSUPPORTED: t/t_property_untyped_unsup.v:19:51: Untyped property port following a typed port
   19 |   property check(cyc_mod_2, logic [4:0] expected, arg3, untyped arg4, arg5);
      |                                                   ^~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
